--- a/IFC2x3/readme
+++ b/IFC2x3/readme
@@ -1,2 +1,4 @@
 This folder is for IFC2x3 compliant files
-Please provide description of file
+Please provide description of file:
+
+xxxxxx.ifc  Exmaple of 2 story house with architectural, structural, and MEP elements. Used CV2.0
